# Nyrex

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES  deny.toml  rustfmt.toml
.agents/: mcp_instructions.md
.agents/rules/: rules.md
.agents/workflows/: workflows.md
apps/flutter/: README.md  l10n.yaml  pubspec.yaml
apps/flutter/lib/: main.dart
apps/flutter/linux/: CMakeLists.txt
apps/flutter/test/: widget_test.dart
apps/flutter/web/: index.html  manifest.json
apps/flutter/windows/: .gitignore  CMakeLists.txt
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: cipher.rs  error.rs  kdf.rs  key.rs  lib.rs
crates/search/: Cargo.toml
crates/store/: Cargo.toml
crates/store/.sqlx/: query-25dd98be5278ac069194b8a5286974b0618a48fa8f63dce3a05da9432b2b00e7.json  query-5da1bf4f3051f38dc784f5baaac17d583f3f06e3d9951b6f3836fe60ebf03bd2.json  query-60b5487246bef73e9337c9cdd2a539895af924746a346c6a3b770b7d0bfedd78.json  query-638a80fab6b55ae98ff6309a25ebd5f08785be347738091130d6e1f8295af09c.json  query-77e45c005ce0f4b44d1adfdeacc4265550efb047e365179d4e573f958756ec96.json  query-8aed17701e64df6728fad4d810f6da10e241a70f84bbaff636f5c24f247b9e2a.json  query-8b7c33ea24b410c73398b7159e7b3eb31a7f0f8511a5a27bde3ce5bf6c04bcca.json  query-b32e4962c2ca4bf173d7c7147ae5a33ba4065f0111d1bb9b2a37cde16a6770d7.json  query-eef65f102e69c46c2c90ea6ba663de2e95d47dc55c5ea02ca4e92bf975578162.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
crates/store/migrations/: 202604170001_initial_schema.sql  202604170002_auth.sql  202604170003_secure_sync_v2.sql
crates/store/src/: lib.rs
crates/store/src/pg/: auth.rs  mod.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs
docs/: architecture_plan_v1.md  stage0_tracker.md  stages_overview.md
docs/backend/services/: auth_sso.md  encryption_model.md  search.md  sync_engine.md
docs/backend/structure/: database_schema.md  monorepo_crates.md
docs/frontend/: DESIGN.yaml
docs/frontend/modules/: finance.md  notes.md  tasks.md  vault.md
docs/frontend/screens/: auth_gateway.md  command_palette.md  dashboard_home.md  empty_onboarding.md
docs/frontend/structure/: app_shell_navigation.md  atomic_design_system.md  design_tokens.md
infra/docker/: docker-compose.yml
services/api/: Cargo.toml
services/api/src/: auth_utils.rs  jwt.rs  main.rs
services/api/src/middleware/: auth.rs  mod.rs
services/api/src/routes/: auth.rs  mod.rs  sync.rs
(+135 files in other folders)
