[workspace]
resolver = "2"
members = [
    "services/api",
    "crates/core",
    "crates/crypto",
    "crates/store",
    "crates/sync",
    "crates/search"
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
axum = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
async-trait = "0.1.86"
dotenvy = "0.15"
