[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
nyrex-core = { path = "../../crates/core" }
nyrex-sync = { path = "../../crates/sync" }
store = { path = "../../crates/store" }
sqlx = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
rand.workspace = true
base64 = "0.22.1"
